hphp/hack/test/typecheck/is_expression/tuple3.php.exp
File "tuple3.php", line 7, characters 7-8:
Invalid argument (Typing[4110])
  File "tuple3.php", line 3, characters 12-29:
  This is a tuple of size 3
  File "tuple3.php", line 6, characters 13-25:
  It is incompatible with a tuple of size 2
